# ESP32-afx_project

./: CMakeLists.txt  README.md  code-format.sh  sdkconfig.defaults
src/app/: CMakeLists.txt
src/app/inc/app/: app_config.h  canbus_mngr.h  rgb_mngr.h  tof_mngr.h
src/app/src/: app_mngr.c  app_mngr.cpp  canbus_mngr.c  rgb_mngr.c  tof_mngr.cpp
src/core/: CMakeLists.txt
src/core/inc/core/: core_tasks.h
src/core/src/: dummy.c
src/drv/: CMakeLists.txt
src/drv/inc/drv/: VL53L0X.h  rgb_ledc_controller.h  vl53l0x_api.h  vl53l0x_api_calibration.h  vl53l0x_api_core.h  vl53l0x_api_strings.h  vl53l0x_def.h  vl53l0x_device.h  vl53l0x_interrupt_threshold_settings.h  vl53l0x_platform.h  vl53l0x_platform_log.h  vl53l0x_tuning.h  vl53l0x_types.h
src/drv/src/: rgb_ledc_controller.c  vl53l0x_api.c  vl53l0x_api_calibration.c  vl53l0x_api_core.c  vl53l0x_api_ranging.c  vl53l0x_api_strings.c  vl53l0x_platform.c
